src/objects/TimeSheet__c.object
<CustomObject>
    <fields>
        <fullName>ConnectedTimeSheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TimeSheet</label>
        <referenceTo>TimeSheet__c</referenceTo>
        <relationshipLabel>TimeSheet</relationshipLabel>
        <relationshipName>TimeSheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaysInPeriod__c</fullName>
        <formula>EndDate__c -  StartDay__c</formula>
        <label>Days In Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FridayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MondayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ProcessId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ReportTime__c</fullName>
        <label>Report Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SaturdayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDay__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SundayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThursdayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TuesdayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WednesdayIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday Included</label>
        <type>Checkbox</type>
    </fields>
    <label>TimeSheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>TimeSheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>